--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Apache WSS4J</name>
     <description>
@@ -108,7 +108,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <targetJdk>1.6</targetJdk>
+        <targetJdk>1.7</targetJdk>
     </properties>
 
     <modules>
@@ -381,6 +381,14 @@
                  <enabled>false</enabled>
              </releases>
          </repository> 
+         <!-- needed for opensaml -->
+         <repository>
+            <id>shib-release</id>
+            <url>https://build.shibboleth.net/nexus/content/groups/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
      </repositories>
     <pluginRepositories>
          <pluginRepository>
