--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -23,12 +23,12 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-ws-security-common</artifactId>
     <name>Apache WSS4J WS-Security Common</name>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     
     <properties>
         <wss4j.osgi.import>
@@ -102,6 +102,19 @@
             <artifactId>xmlsec</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml-saml-api</artifactId>
+            <version>${opensaml.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml-saml-impl</artifactId>
+            <version>${opensaml.version}</version>
+            <scope>compile</scope>
+        </dependency>
+<!--
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
@@ -197,6 +210,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+-->
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-kerberos-codec</artifactId>
