--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -26,7 +26,7 @@ duplicateError = Multiple security tokens with the same Id have been detected
 encodeError = Cannot encode the certificate data
 encryptionCryptoFailure = EncryptionCrypto instantiation failed
 encryptionKeyStoreNotSet = Encryption KeyStore is not set
-error00 = Failed to load credentials.
+failedCredentialLoad = Failed to load credentials.
 invalidCertData = Unexpected number of certificates: {0}
 invalidCertForSKI = An X509 certificate with version 3 must be used for SKI. The presented cert has version: {0}
 invalidCert = The provided certificate is invalid
@@ -34,7 +34,6 @@ invalidSAMLsecurity = SAML token security failure
 invalidSAMLToken = Invalid SAML assertion : {0}
 invalidTimestamp = Invalid timestamp: {0}
 invalidValueType = Bad ValueType \"{0}\"
-ioError00 = Failed to load credentials.
 kerberosLoginError = An error occurred in trying to obtain a TGT: {0}
 kerberosServiceTicketError = An error occurred in trying to obtain a service ticket
 kerberosTicketValidationError = An error occurred in trying to validate a ticket
@@ -80,7 +79,6 @@ proxyNotFound = Proxy file ({0}) not found.
 requiredElementNotProtected = Element {0} is not protected
 requiredElementNotSigned = Element {0} is not included in the signature
 resourceNotFound = Cannot load the resource {0}
-secError00 = Failed to load credentials.
 signatureCryptoFailure = SignatureCrypto instantiation failed
 signatureKeyStoreNotSet = Signature KeyStore is not set
 signatureVerificationCryptoFailure = SignatureVerificationCrypto instantiation failed
