--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -66,7 +66,7 @@ noSAMLCallbackHandler = No SAMLCallbackHandler was supplied
 noSAMLVersion = No SAML Version was set on the SAMLCallback
 noSecProvider = Specified security provider not available
 noSecTokRef = EncryptedKey does not contain ds:KeyInfo/wsse:SecurityTokenReference
-noSigCryptoFile = No crypto property file supplied to verify signature
+noSigCryptoFile = No crypto property file supplied for signature
 noSignatureUser = Signature user is not set
 noSKIHandling = Problem with SKI information: {0}
 notASOAPMessage = Request is not a valid SOAP Message
