STRParser review + refactor
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1663694 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -95,6 +95,7 @@ unsupportedKeyInfo = Unsupported KeyInfo type
 unsupportedKeyTransp = unsupported key transport encryption algorithm: {0}
 unsupportedSecurityToken = Unsupported SecurityToken {0}
 secureProcessing.AllowRSA15KeyTransportAlgorithm = The use of RSAv1.5 key transport algorithm is discouraged. Nonetheless can it be enabled via the \"AllowRSA15KeyTransportAlgorithm\" property in the configuration.
+invalidSTRParserParameter = A required parameter was not supplied to an STRParser implementation
 
 BadContextToken = The requested context elements are insufficient or unsupported
 UnsupportedContextToken = Not all of the values associated with the SCT are supported
