--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -171,7 +170,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
                 <configuration>
                     <useReleaseProfile>false</useReleaseProfile>
                     <preparationGoals>clean install</preparationGoals>
@@ -183,6 +181,16 @@
         </plugins>
         <pluginManagement>
             <plugins>
+	            <plugin>
+    	            <groupId>org.apache.maven.plugins</groupId>
+        	        <artifactId>maven-release-plugin</artifactId>
+            	    <version>2.5</version>
+            	</plugin>
+                <plugin>
+        	        <groupId>org.apache.maven.plugins</groupId>
+            	    <artifactId>maven-source-plugin</artifactId>
+                	<version>2.3</version>
+            	</plugin>            	
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
