--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -25,7 +25,7 @@
         <relativePath>../parent/pom.xml</relativePath>
         <version>2.1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>integration</artifactId>
+    <artifactId>wss4j-integration</artifactId>
     <name>Apache WSS4J WS-Security Integration</name>
 
     <build>
