Update to latest pmd
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1671097 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.4</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.sourceforge.pmd</groupId>
+                        <artifactId>pmd-core</artifactId>
+                        <version>5.3.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>net.sourceforge.pmd</groupId>
+                        <artifactId>pmd-java</artifactId>
+                        <version>5.3.0</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <sourceEncoding>UTF-8</sourceEncoding>
                     <failOnViolation>true</failOnViolation>
@@ -136,9 +148,6 @@
                     <verbose>true</verbose>
                     <minimumTokens>100</minimumTokens>
                     <targetJdk>${targetJdk}</targetJdk>
-                    <excludes>
-                        <exclude>**/CryptoBase.java, **/DOM2Writer.java</exclude>
-                    </excludes>
                     <excludeRoots>
                         <excludeRoot>${basedir}/src/main/generated</excludeRoot>
                     </excludeRoots>
