--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0</version>
     </parent>
     <artifactId>wss4j-parent</artifactId>
     <packaging>pom</packaging>
@@ -234,7 +234,7 @@
                 						</goals>
                 					</pluginExecutionFilter>
                 					<action>
-                						<ignore></ignore>
+                						<ignore />
                 					</action>
                 				</pluginExecution>
                 				<pluginExecution>
@@ -247,7 +247,7 @@
                 						</goals>
                 					</pluginExecutionFilter>
                 					<action>
-                						<ignore></ignore>
+                						<ignore />
                 					</action>
                 				</pluginExecution>
                 			</pluginExecutions>
