Trying to move the compiler plugin
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/2_0_x-fixes@1675399 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,17 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>${targetJdk}</source>
+                    <target>${targetJdk}</target>
+                    <showWarnings>true</showWarnings>
+                    <compilerArgument>-Xlint:overrides</compilerArgument>
+                </configuration>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
