--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -45,6 +45,7 @@
         <neethi.version>3.0.3</neethi.version>
         <opensaml.version>2.6.1</opensaml.version>
         <slf4j.version>1.7.9</slf4j.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <woodstox.core.asl.version>4.4.1</woodstox.core.asl.version>
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <xalan.version>2.7.2</xalan.version>
@@ -221,7 +222,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.5</version>
+                    <version>2.6</version>
                     <configuration>
                         <archive>
                             <manifestFile>${wss4j.manifest.location}</manifestFile>
