Removing old copyright notice
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/2_0_x-fixes@1683108 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -23,6 +23,7 @@ decoding.general = Error while decoding
 decryptionCryptoFailure = DecryptionCrypto instantiation failed
 decryptionKeyStoreNotSet = Decryption KeyStore is not set
 duplicateError = Multiple security tokens with the same Id have been detected
+elementNotSigned = Element {0} is not signed
 encodeError = Cannot encode the certificate data
 encryptionCryptoFailure = EncryptionCrypto instantiation failed
 encryptionKeyStoreNotSet = Encryption KeyStore is not set
@@ -77,8 +78,6 @@ noUserCertsFound = No certificates for user {0} were found for {1}
 noXMLSig = Cannot setup signature data structure
 parseError = Cannot parse/decode the certificate data
 proxyNotFound = Proxy file ({0}) not found.
-requiredElementNotProtected = Element {0} is not protected
-requiredElementNotSigned = Element {0} is not included in the signature
 resourceNotFound = Cannot load the resource {0}
 secError00 = Failed to load credentials.
 signatureCryptoFailure = SignatureCrypto instantiation failed
