Adding some functionality to extract AuthorityKeyIdentifier information from a cert using BouncyCastle
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/2_0_x-fixes@1688187 13f79535-47bb-0310-9956-ffa450edef68

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -80,6 +80,11 @@
                 <version>${bcprov.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>${bcprov.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.neethi</groupId>
                 <artifactId>neethi</artifactId>
                 <version>${neethi.version}</version>
