Temporary make the net.shibboleth stuff optional to allow some OSGi testing while we figure out a proper solution
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1689936 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -30,7 +30,8 @@
     
     <properties>
         <wss4j.osgi.import>
-            org.joda.time*;version="[1.6,3)"
+            org.joda.time*;version="[1.6,3)",
+            net.shibboleth*;resolution:=optional
         </wss4j.osgi.import>
         <!--
                         <DynamicImport-Package>
