--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -24,11 +24,11 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0.5</version>
+        <version>2.0.5-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-ws-security-stax</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.5-SNAPSHOT</version>
     <name>Apache WSS4J Streaming WS-Security</name>
 
     <dependencies>
