--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j</artifactId>
-    <version>2.1.3-SNAPSHOT</version>
+    <version>2.1.2</version>
     <packaging>pom</packaging>
     <name>Apache WSS4J</name>
     <description>
@@ -79,12 +79,12 @@
     </licenses>
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/trunk/
+            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/tags/wss4j-2.1.2
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/trunk/
+            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/tags/wss4j-2.1.2
         </developerConnection>
-        <url>http://svn.apache.org/repos/asf/webservices/wss4j/trunk</url>
+        <url>http://svn.apache.org/repos/asf/webservices/wss4j/tags/wss4j-2.1.2</url>
     </scm>
     <organization>
         <name>The Apache Software Foundation</name>
