--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.1.3-SNAPSHOT</version>
+        <version>2.1.3</version>
     </parent>
     <artifactId>wss4j-ws-security-stax</artifactId>
     <name>Apache WSS4J Streaming WS-Security</name>
