Updating certs to use SHA256withRSA instead of MD5withRSA for forthcoming JDK9
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1702039 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/test/resources/keys/ca.config
+++ b/ws-security-common/src/test/resources/keys/ca.config
@@ -13,7 +13,7 @@ certificate             = $dir/wss40CA.pem
 private_key             = $dir/wss40CAKey.pem
 default_days            = 3650
 default_crl_days        = 30
-default_md              = md5
+default_md              = sha256
 preserve                = no
 x509_extensions         = usr_cert
 policy                  = policy_match
