--- a/pom.xml
+++ b/pom.xml
@@ -362,6 +362,39 @@
                 </pluginManagement>
             </build>
          </profile>
+         <profile>
+            <id>ibm</id>
+            <activation>
+                <property>
+                    <name>java.vendor</name>
+                    <value>IBM Corporation</value>
+                </property>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.18.1</version>
+                            <inherited>true</inherited>
+                            <configuration>
+                               <reportFormat>brief</reportFormat>
+                               <useFile>false</useFile>
+                               <childDelegation>false</childDelegation>
+                               <includes>
+                                   <include>**/*Test.java</include>
+                               </includes>
+                               <systemPropertyVariables>
+                                   <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
+<org.apache.xml.security.cipher.gcm.useIvParameterSpec>true</org.apache.xml.security.cipher.gcm.useIvParameterSpec>
+                               </systemPropertyVariables>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
 
     </profiles>
 
