--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -23,12 +23,12 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0.6</version>
+        <version>2.0.7-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-ws-security-dom</artifactId>
     <name>Apache WSS4J DOM WS-Security</name>
-    <version>2.0.6</version>
+    <version>2.0.7-SNAPSHOT</version>
     
     <properties>
         <wss4j.osgi.dynamic.import>
