Adding partial test coverage via PMD
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1720185 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -128,25 +128,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.4</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>net.sourceforge.pmd</groupId>
-                        <artifactId>pmd-core</artifactId>
-                        <version>5.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>net.sourceforge.pmd</groupId>
-                        <artifactId>pmd-java</artifactId>
-                        <version>5.3.0</version>
-                    </dependency>
-                </dependencies>
+                <version>3.5</version>
                 <configuration>
                     <sourceEncoding>UTF-8</sourceEncoding>
                     <failOnViolation>true</failOnViolation>
                     <linkXRef>false</linkXRef>
                     <verbose>true</verbose>
-                    <minimumTokens>100</minimumTokens>
+                    <!--<includeTests>true</includeTests>-->
                     <targetJdk>${targetJdk}</targetJdk>
                     <excludeRoots>
                         <excludeRoot>${basedir}/src/main/generated</excludeRoot>
