Enabling PMD for the tests as well
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1720336 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
                     <failOnViolation>true</failOnViolation>
                     <linkXRef>false</linkXRef>
                     <verbose>true</verbose>
-                    <!--<includeTests>true</includeTests>-->
+                    <includeTests>true</includeTests>
                     <targetJdk>${targetJdk}</targetJdk>
                     <excludeRoots>
                         <excludeRoot>${basedir}/src/main/generated</excludeRoot>
