Some checkstyle work
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1721141 13f79535-47bb-0310-9956-ffa450edef68

--- a/bindings/pom.xml
+++ b/bindings/pom.xml
@@ -40,4 +40,17 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>disable-checkstyle</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <checkstyle.skip>true</checkstyle.skip>
+            </properties>
+        </profile>
+    </profiles>
+        
+
 </project>
