--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,35 @@
                     </execution>
                 </executions>
             </plugin>
+<!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.15</version>
+                <configuration>
+                    <configLocation>wss4j-checkstyle.xml</configLocation>
+                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
+                    <encoding>UTF-8</encoding>
+                    <failOnViolation>true</failOnViolation>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.wss4j</groupId>
+                        <artifactId>build-tools</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                       <id>validate</id>
+                       <phase>validate</phase>
+                       <goals>
+                           <goal>check</goal>
+                       </goals>
+                    </execution>
+                 </executions>
+            </plugin>
+-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -332,12 +361,14 @@
             <properties>
                 <maven.test.skip>true</maven.test.skip>
                 <pmd.skip>true</pmd.skip>
+                <checkstyle.skip>true</checkstyle.skip>
             </properties>
         </profile>
         <profile>
             <id>nochecks</id>
             <properties>
                 <pmd.skip>true</pmd.skip>
+                <checkstyle.skip>true</checkstyle.skip>
             </properties>
         </profile>
         <profile>
