Minor error change
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1723097 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -54,7 +54,7 @@ noEncAlgo = xenc:EncryptedKey does not contain xenc:EncryptionMethod/@Algorithm
 noEncElement = Element to encrypt/sign not found: {0}
 noEncKey = EncryptedData does not contain xenc:EncryptedKey
 noEncryptionUser = Encryption user is not set
-noKeyinfo = EncryptedKey does not contain ds:KeyInfo
+noKeyinfo = EncryptedKey/EncryptedData does not contain ds:KeyInfo
 noKeyInSAMLToken = Provided SAML token does not contain a suitable key
 noKeyname = ds:KeyName does not contain a key name
 noKeySupplied = No symmetrical encryption key supplied
