--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -21,4 +21,10 @@
   <name>Apache WSS4J Build Tools</name>
   <packaging>jar</packaging>
 
+  <parent>
+      <groupId>org.apache.wss4j</groupId>
+      <artifactId>wss4j</artifactId>
+      <version>2.2.0-SNAPSHOT</version>
+  </parent>
+
 </project>
