--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -21,10 +21,18 @@
   <name>Apache WSS4J Build Tools</name>
   <packaging>jar</packaging>
 
-  <parent>
-      <groupId>org.apache.wss4j</groupId>
-      <artifactId>wss4j</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
-  </parent>
+  <distributionManagement>
+        <repository>
+            <id>apache.releases.https</id>
+            <name>Apache Release Distribution Repository</name>
+            <url>https://repository.apache.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>apache.snapshots.https</id>
+            <name>Apache Development Snapshot Repository</name>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+            <!--uniqueVersion>false</uniqueVersion-->
+        </snapshotRepository>
+   </distributionManagement>
 
 </project>
