Improves the error message
This adds some quotes around some data which would make it easy to spot
whitespace errors. Also, the error message that the given JCE provider
does not handle X.509 is now more vocal and tells the developer that
the following exception is not the end of the world and he did nothing
wrong at that point.

git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1732860 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -74,26 +74,26 @@ notASOAPMessage = Request is not a valid SOAP Message
 noToken = Referenced Token \"{0}\" not found
 noTokenUser = Token user is not set
 noUser = User is not set
-noUserCertsFound = No certificates for user {0} were found for {1}
+noUserCertsFound = No certificates for user \"{0}\" were found for {1}
 noXMLSig = Cannot setup signature data structure
 parseError = Cannot parse/decode the certificate data
 proxyNotFound = Proxy file ({0}) not found.
-resourceNotFound = Cannot load the resource {0}
+resourceNotFound = Cannot load the resource \"{0}\"
 signatureCryptoFailure = SignatureCrypto instantiation failed
 signatureKeyStoreNotSet = Signature KeyStore is not set
 signatureVerificationCryptoFailure = SignatureVerificationCrypto instantiation failed
 signatureVerificationKeyStoreNotSet = Signature verification KeyStore is not set
 spnegoKeyError = An error occurred in trying to unwrap a SPNEGO key
-unknownAlgorithm = An unknown algorithm was specified: {0}
+unknownAlgorithm = An unknown algorithm was specified: \"{0}\"
 unableToLoadClass = Unable to load class {0}
 unhandledToken = Security token supported but currently not handled \"{0}\"
 unknownSignatureAlgorithm = An unknown signature algorithm was specified: {0}
 unsupportedBinaryTokenType = Token type \\"{0}\\"
 unsupportedCertType = Certificate type not supported by security provider
-unsupportedKeyId = Unsupported key identification: {0}
+unsupportedKeyId = Unsupported key identification: \"{0}\"
 unsupportedKeyInfo = Unsupported KeyInfo type
 unsupportedKeyTransp = unsupported key transport encryption algorithm: {0}
-unsupportedSecurityToken = Unsupported SecurityToken {0}
+unsupportedSecurityToken = Unsupported SecurityToken \"{0}\"
 secureProcessing.AllowRSA15KeyTransportAlgorithm = The use of RSAv1.5 key transport algorithm is discouraged. Nonetheless can it be enabled via the \"AllowRSA15KeyTransportAlgorithm\" property in the configuration.
 invalidSTRParserParameter = A required parameter was not supplied to an STRParser implementation
 
