--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -23,7 +23,7 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.1.5</version>
+        <version>2.1.6-SNAPSHOT</version>
     </parent>
     <artifactId>wss4j-integration</artifactId>
     <name>Apache WSS4J WS-Security Integration</name>
