--- a/policy/pom.xml
+++ b/policy/pom.xml
@@ -24,11 +24,11 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0.7-SNAPSHOT</version>
+        <version>2.0.7</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-policy</artifactId>
-    <version>2.0.7-SNAPSHOT</version>
+    <version>2.0.7</version>
     <name>Apache WSS4J WS-SecurityPolicy model</name>
 
     <dependencies>
