--- a/bindings/pom.xml
+++ b/bindings/pom.xml
@@ -21,14 +21,14 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
-        <version>2.0.7</version>
+        <version>2.0.8-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-bindings</artifactId>
-    <version>2.0.7</version>
+    <version>2.0.8-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security Bindings</name>
 
     <properties>
