--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j</artifactId>
-        <version>2.1.7</version>
+        <version>2.1.8-SNAPSHOT</version>
     </parent>
     <artifactId>wss4j-parent</artifactId>
     <packaging>pom</packaging>
