--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,8 +36,9 @@
     <properties>
         <apacheds.version>2.0.0-M19</apacheds.version>
         <bcprov.version>1.55</bcprov.version>
+        <commons.collections.version>3.2.2</commons.collections.version>
         <commons.compress.version>1.4.1</commons.compress.version>
-        <ehcache.version>2.8.5</ehcache.version>
+        <ehcache.version>2.8.8</ehcache.version>
         <geronimo.javamail.version>1.7.1</geronimo.javamail.version>
         <jasypt.version>1.9.2</jasypt.version>
         <junit.version>4.12</junit.version>
