--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -23,11 +23,11 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0.10</version>
+        <version>2.0.11-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>integration</artifactId>
-    <version>2.0.10</version>
+    <version>2.0.11-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security Integration</name>
 
     <build>
