Making build work with JDK9
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1790086 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -98,9 +98,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <inherited>true</inherited>
                 <configuration>
                     <groups>${test.groups}</groups>
-                    <argLine>-Xmx2000m</argLine>
                     <systemPropertyVariables>
                         <log4j.configuration>log4j-wss.xml</log4j.configuration>
                     </systemPropertyVariables>
