--- a/ws-security-policy-stax/pom.xml
+++ b/ws-security-policy-stax/pom.xml
@@ -84,6 +84,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <inherited>true</inherited>
                 <configuration>
                     <systemPropertyVariables>
                         <log4j.configuration>log4j-wsp.xml</log4j.configuration>
